# voi-typed

./: cabal.project  script.sh  voi-typed.cabal
app/: Main.hs  Types.hs
