cabal-version: 3.8
name: voi-typed
version: 0.1.0.0
-- synopsis:
-- description:
license: NONE
author: Fendor
maintainer: fendor@posteo.de
-- copyright:
build-type: Simple

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable voi-typed
  import: warnings
  ghc-options: -O0 -threaded -rtsopts
  main-is: Main.hs
  other-modules: Types
  -- other-extensions:
  build-depends:
    aeson,
    base,
    bytestring,
    directory,
    filepath,
    ghc-debug-stub,
    servant,
    servant-server,
    stm,
    text,
    transformers,
    wai,
    wai-logger,
    containers,
    warp,

  hs-source-dirs: app
  default-language: Haskell2010
